--- a/main.css
+++ b/main.css
@@ -1,6 +1,23 @@
+/*
+ * --------------------- \\
+ * Lists
+ * --------------------- //
+*/
+
 li li {
     margin-top: 10px;
 }
+
+li ul,
+li ol {
+    margin-bottom: 0;
+}
+
+/*
+ * --------------------- \\
+ * End Lists
+ * --------------------- //
+*/
 
 hr {
     border-bottom: none;
