sync(AI—from a Bird's Eye,6466a80e303132076b07f284)

--- a/main.css
+++ b/main.css
@@ -1,7 +1,26 @@
 /*
- * --------------------- \\
- * Lists
- * --------------------- //
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+ * TOC
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+
+ * Universal HTML Elements
+ * Single Insights
+
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+ * End TOC
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+*/
+
+/*
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+ * Unversal HTML Lements
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
 */
 
 li ul,
@@ -17,12 +36,6 @@ li li:last-of-type {
     margin-bottom: 0;
 }
 
-/*
- * --------------------- \\
- * End Lists
- * --------------------- //
-*/
-
 hr {
     border-bottom: none;
     border-top: 1px solid #000;
@@ -31,3 +44,27 @@ hr {
     position: relative;
     left: -100px;
 }
+
+/*
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+ * End Unversal HTML Lements
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+*/
+
+/*
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+ * Single Insights
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+*/
+
+/*
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+ * End Single Insights
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+*/
