sync(AI—from a Bird's Eye,6466a80e303132076b07f284)

--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
  * ------------------------------------------ //
 
  * Universal HTML Elements
+ * Embedded Media
  * Single Insights
 
  * ------------------------------------------ \\
@@ -49,6 +50,27 @@ hr {
  * ------------------------------------------ \\
  * ------------------------------------------ //
  * End Unversal HTML Lements
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+*/
+
+/*
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+ * Embedded Media
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+*/
+
+iframe {
+    display: block;
+    margin: 36px auto 36px;
+}
+
+/*
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+ * End Embedded Media
  * ------------------------------------------ \\
  * ------------------------------------------ //
 */
