--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@
  * Universal HTML Elements
  * Embedded Media
  * Single Insights
+ * Custom Features
 
  * ------------------------------------------ \\
  * ------------------------------------------ //
@@ -65,7 +66,7 @@ hr {
 iframe {
     display: block;
     aspect-ratio: 16 / 9;
-    margin: 40px auto;
+    margin: 50px auto;
 }
 
 /*
@@ -88,6 +89,55 @@ iframe {
  * ------------------------------------------ \\
  * ------------------------------------------ //
  * End Single Insights
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+*/
+
+/*
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+ * Custom Features
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+*/
+
+ul.toc,
+ul.toc ul {
+    list-style-type: none;
+}
+
+ul.toc li {
+    position: relative;
+    line-height: 1;
+    padding-left: 14px;
+    font-weight: 400;
+}
+
+ul.toc li:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    height: 1em;
+    border-left: 2px solid;
+}
+
+ul.toc > li:before {
+    border-color: #E52793;
+}
+
+ul.toc > li > ul > li:before {
+    border-color: #911DB0;
+}
+
+ul.toc > li > ul > li > ul > li:before {
+    border-color: #2cd7e3;
+}
+
+/*
+ * ------------------------------------------ \\
+ * ------------------------------------------ //
+ * End Custom Features
  * ------------------------------------------ \\
  * ------------------------------------------ //
 */
