--- a/main.css
+++ b/main.css
@@ -7,7 +7,6 @@
 
  * Universal HTML Elements
  * Embedded Media
- * Single Insights
  * Custom Features
 
  * ------------------------------------------ \\
@@ -63,6 +62,11 @@ hr {
  * ------------------------------------------ //
 */
 
+.w-richtext figure {
+    max-width: 100%;
+    margin: 36px auto;
+}
+
 iframe {
     display: block;
     aspect-ratio: 16 / 9;
@@ -73,22 +77,6 @@ iframe {
  * ------------------------------------------ \\
  * ------------------------------------------ //
  * End Embedded Media
- * ------------------------------------------ \\
- * ------------------------------------------ //
-*/
-
-/*
- * ------------------------------------------ \\
- * ------------------------------------------ //
- * Single Insights
- * ------------------------------------------ \\
- * ------------------------------------------ //
-*/
-
-/*
- * ------------------------------------------ \\
- * ------------------------------------------ //
- * End Single Insights
  * ------------------------------------------ \\
  * ------------------------------------------ //
 */
@@ -144,7 +132,7 @@ iframe {
 }
 
 .toc > ul > li > ul > li > ul > li:before {
-    border-color: #FCD263;
+    border-color: #2CD7E3;
 }
 
 /*
