--- a/main.css
+++ b/main.css
@@ -124,7 +124,8 @@ iframe {
     background: #f7f8fa;
     border: 1px solid #dce1e9;
     padding: 46px 46px 34px;
-    margin-bottom: 50px
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .toc h4 {
