--- a/main.css
+++ b/main.css
@@ -200,7 +200,7 @@ iframe {
  * ---------------------- //
 */
 
-.i-single blockquote {
+/* .i-single blockquote {
     padding: 0 0 0 24px;
     margin: 28px;
     border-left: 2px solid var(--color--cyan);
@@ -214,7 +214,7 @@ iframe {
 
 .i-single blockquote p:last-of-type {
     margin-bottom: 0;
-}
+} */
 
 /*
  * ---------------------- \\
